--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask
 Flask-SocketIO
-pytz
+Flask_sqlalchemy
 Flask-Session==0.3.1
 psycopg2-binary==2.8.4
-SQLAlchemy==1.3.15
+SQLAlchemy==1.3.15???
 Werkzeug==0.16.0
+pytz
