--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask
-Flask-SocketIO
-Flask_sqlalchemy
+Flask==1.1.2
+Flask-SocketIO==4.2.1
+Flask_sqlalchemy==2.4.1
 Flask-Session==0.3.1
 psycopg2-binary==2.8.4
-SQLAlchemy==1.3.15???
+SQLAlchemy==1.3.15
 Werkzeug==0.16.0
-pytz
+pytz==2019.3
+eventlet==0.25.1
